@@ -43,17 +43,17 @@ namespace Orthanc
   private:
     void SendHeaderInternal(Orthanc_HttpStatus status);
 
-    void SendOkHeader(const char* contentType,
-                      bool hasContentLength,
-                      uint64_t contentLength,
-                      const char* contentFilename);
-
   public:
     virtual ~HttpOutput()
     {
     }
 
     virtual void Send(const void* buffer, size_t length) = 0;
+
+    void SendOkHeader(const char* contentType,
+                      bool hasContentLength,
+                      uint64_t contentLength,
+                      const char* contentFilename);
 
     void SendCustomOkHeader(const std::string& customHeader);
 
